PER-123 PER-131 Added styling to the clickable download buttons. Added styling to the dialog box popup. Currently, the dialog box popup causes the page to shift to the right - this is something I'm going to have to research and will make a bug task for in Jira.
PER-123

styles.css : Added the 'downloadButton' class to share the styles of the upload button. Added a text color declaration which somehow wasn't necessary prior to this.

list-questions.component.html : Added 'downloadButton' style to the download button, and added a download icon to the display. Adjusted the layout of the code for better readability.

attachment.component.html : Added an extra space to the bottom of the component so it wouldn't sit directly next to the element below.

PER-131

confirmation-dialog.component.css : Added various specific styling elements.
confirmation-dialog.component.html : Added classes to the divs containing the message and the buttons.

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,11 +30,14 @@ html{
   width: 70%;
 }
 body {
-  margin: 0;
+  margin: auto;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   border-radius: 5px;
   background-color: #f0f0f0;
   margin-bottom: 10px;
+
+  /* STYLES APPLIED WHILE DIALOG BOX IS BROKEN */
+  max-width: 1250px;
 }
 
 /* Adjusting the top radius values to make page radius rounded. */
@@ -142,9 +145,10 @@ button.saveButton {
   float: right;
 }
 
-/* Styles applied to the Upload button. Puts upload button on one line, rather than inline with the lower content. */
-button.uploadButton {
+/* Styles applied to the Upload and Download buttons. Puts upload button on one line, rather than inline with the lower content. */
+button.uploadButton, button.downloadButton {
   background-color: #404040;
+  color: white;
   margin-bottom: 10px;
 }
 
